tests/whole_screen/snapshots/whole_screen__native__settings_takes_at_most_half_the_window_in_native_mode.snap
---
source: tests/whole_screen/native.rs
expression: opened
---
80x24 cursor 23,0 scrollback 30
|quick brown fox jumps over the lazy dog. the quick brown fox jumps over the lazy|
|dog. the quick brown fox jumps over the lazy dog. the quick brown fox jumps over|
|the lazy dog. the quick brown fox jumps over the lazy dog. the quick brown fox  |
|jumps over the lazy dog. the quick brown fox jumps over the lazy dog. the quick |
|brown fox jumps over the lazy dog. the quick brown fox jumps over the lazy dog. |
|the quick brown fox jumps over the lazy dog. the quick brown fox jumps over the |
|lazy dog. the quick brown fox jumps over the lazy dog. the quick brown fox jumps|
|over the lazy dog. the quick brown fox jumps over the lazy dog. the quick brown |
|fox jumps over the lazy dog. the quick brown fox jumps over the lazy dog. the   |
|quick brown fox jumps over the lazy dog. done.                                  |
|                                                                                |
|› /settings                                                                     |
|────────────────────────────────────────────────────────────────────────────────|
|                                                                                |
|Settings     Status   ‹ Config ›   Usage                                        |
|                                                                                |
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ / to search                                                                  │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|                                                                                |
|› Theme                                                                     auto|
|  ↓ 17 more                                                                     |
|                                                                                |
|↑↓ to walk · enter changes · / to search · ←→ tabs · esc to close               |
