tests/whole_screen/snapshots/whole_screen__native__slash_list_takes_at_most_half_the_window_in_native_mode.snap
---
source: tests/whole_screen/native.rs
expression: opened
---
80x24 cursor 21,5 scrollback 28
|over the lazy dog. the quick brown fox jumps over the lazy dog. the quick brown |
|fox jumps over the lazy dog. the quick brown fox jumps over the lazy dog. the   |
|quick brown fox jumps over the lazy dog. the quick brown fox jumps over the lazy|
|dog. the quick brown fox jumps over the lazy dog. the quick brown fox jumps over|
|the lazy dog. the quick brown fox jumps over the lazy dog. the quick brown fox  |
|jumps over the lazy dog. the quick brown fox jumps over the lazy dog. the quick |
|brown fox jumps over the lazy dog. the quick brown fox jumps over the lazy dog. |
|the quick brown fox jumps over the lazy dog. the quick brown fox jumps over the |
|lazy dog. the quick brown fox jumps over the lazy dog. the quick brown fox jumps|
|over the lazy dog. the quick brown fox jumps over the lazy dog. the quick brown |
|fox jumps over the lazy dog. the quick brown fox jumps over the lazy dog. the   |
|quick brown fox jumps over the lazy dog. done.                                  |
|› /help            what these are                                               |
|  /release-notes   what changed in each release                                 |
|  /context         what fills the model's window                                |
|  /usage           what the session has used, and plan limits                   |
|  /model           pick which model answers                                     |
|  ↓ 13 more                                                                     |
|                                                                                |
|                                                                 99% window left|
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ › /                                                                          │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)                       anthropic · claude-test-1|
