tests/whole_screen/snapshots/whole_screen__native__usage_after_a_turn_on_a_key_says_no_limits_were_reported_and_closes_on_escape_in_native_mode.snap
---
source: tests/whole_screen/native.rs
expression: "crate::timeless(&picture)"
---
80x30 cursor 29,0 scrollback 5
|│                                  │ ───────────────────────────────────────── │|
|│  /…/workspace                    │                                           │|
|│                                  │ Tips                                      │|
|│                                  │                                           │|
|│                                  │ · /          opens the command list       │|
|│                                  │ · \ enter    adds a line without sending  │|
|│                                  │ · shift+tab  steps the permission mode    │|
|│                                  │ · ctrl+c     clears the line typed so far │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|                                                                                |
|› say hello                                                                     |
|                                                                                |
|Hello.                                                                          |
|                                                                                |
|› /usage                                                                        |
|────────────────────────────────────────────────────────────────────────────────|
|                                                                                |
|Usage · anthropic · API key                                                     |
|                                                                                |
|Session                                                                         |
|  Total cost       not priced                                                   |
|  API time         Ns                                                           |
|  Wall time        Ns                                                           |
|  Lines changed    +0 −0                                                        |
|  Tokens           0 in · 4 out · 0 cache read · 0 cache write                  |
|                                                                                |
|Context                                                                         |
|  ↓ 4 more                                                                      |
|                                                                                |
|esc to close · ↑↓ to see more                                                   |
